--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,15 +8,33 @@
 
 </head>
 <body>
-    <div class="w-full min-h-screen bg-zinc-900 text-white p-10 flex items-center justify-center">
-        <div class="h-3/6 w-1/3 rounded-md bg-zinc-800 p-5 flex flex-col">
-            <h1 class="text-2xl text-center">Profile Page</h1>
-            <!-- <h2 class="text-2xl ">Hello, <%= user.name %></h2> -->
-            
-        </div>
+   <div class="w-full min-h-screen bg-zinc-900 text-white p-8">
+    <div class="w-full flex justify-end">
+        <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/logout">Logout</a>
     </div>
-    
-    
+    <h3 class="text-3xl"><span class="font-light">Hello</span>, <%= user.name %></h3>
+    <h5 class="mb-5 font-light">You can create new post</h5>
+    <form method = "post" action="/post">
+        <textarea placeholder="What's on your mind ?" class="w-1/3 px-2 outline-none resize-none bg-transparent border-2 border-zinc-800 rounded-md"name="content" ></textarea>
+        <input type="submit" class="bg-blue-500 mt-2 w-40 h-10 rounded-md block " >
+    </form>
+    <div class="posts mt-20">
+        <h3 class="text-zinc-400">Your Posts</h3>
+        <div class="postcontainer mt-5">
+           <% user.posts.reverse().forEach(function(post) { %> 
+            <div class="post w-1/3 p-4 rounded-md border-2 border-zinc-600 mb-3">
+                <h4 class="text-blue-500 mb-3"><%= user.username %></h4>
+                <p class="text-sm tracking-tight"><%= post.content %></p>
+                <div class="btns flex gap-4 mt-5">
+                    <a class="text-blue-500" href="">Likes</a>
+                    <a class="text-zinc-600" href="">Edit</a>
+                </div>
+            </div>
+            <% }) %>
+        </div>
+        
+    </div>
+   </div>
     
 </body>
 </html>
