--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,7 +12,11 @@
     <div class="w-full flex justify-end">
         <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/logout">Logout</a>
     </div>
+    <div class="flex items-start gap-3">
+        <div class="w-10 h-10 rounded-md ">
+            <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profilepic %>" alt="user picture" ></div>
     <h3 class="text-3xl"><span class="font-light">Hello</span>, <%= user.name %></h3>
+    </div>
     <h5 class="mb-5 font-light">You can create new post</h5>
     <form method = "post" action="/post">
         <textarea placeholder="What's on your mind ?" class="w-1/3 px-2 outline-none resize-none bg-transparent border-2 border-zinc-800 rounded-md"name="content" ></textarea>
